--- a/CV.html
+++ b/CV.html
@@ -6,7 +6,7 @@
     <title>简历</title>
 </head>
 <body>
-<div class="topNavBar">
+<div id="topNavBar" class="topNavBar">
     <div class="topNavBarSon clearfix">
 <a href="#" class="logo">
     <span class="rs">RS</span>
