--- a/CV.html
+++ b/CV.html
@@ -12,10 +12,10 @@
     <span class="rs">RS</span>
     <span class="card">card</span>
 </a>
-    <ul class="topList">
-        <li><a href="#">关于</a></li>
-        <li><a href="#">技能</a></li>
-        <li><a href="#">作品</a></li>
+    <ul id="topList" class="topList">
+        <li><a href="#about">关于</a></li>
+        <li><a href="#skill">技能</a></li>
+        <li><a href="#productions">作品</a></li>
         <li><a href="#">博客</a></li>
         <li><a href="#">日历</a></li>
         <li><a href="#">联系方式</a></li>
@@ -27,7 +27,7 @@
     <div class="mask"></div>
 </div>
 <main>
-    <div class="userCard">
+    <div id="about" class="userCard">
     <div class="pictureAndText clearfix">
         <div class="userPicture">
             <img src="img/avatar.jpg">
@@ -86,7 +86,7 @@
         汤成， 菜鸟前端工程师，资深前端讲师，现在在 毛坦厂 教前端课程。<br/>
         技能：前端开发，Rails 开发，Node.js 开发
     </p>
-    <div class="skill">
+    <div id="skill" class="skill">
         <h2>技能</h2>
         <ul class="clearfix">
             <li>HTML5 & CSS3
@@ -121,7 +121,7 @@
             </li>
         </ul>
     </div>
-    <div class="sampleReels">
+    <div id="productions" class="sampleReels">
         <p class="sampleText">作品集</p>
         <ul class="clearfix">
             <li id="point1">所有</li>
@@ -144,6 +144,7 @@
         </div>
     </div>
 </main>
+<script type="text/javascript" src="js/tween.js"></script>
 <script type="text/javascript" src="js/2.js"></script>
 </body>
 </html>
