--- a/CV.html
+++ b/CV.html
@@ -144,7 +144,7 @@
         </div>
     </div>
 </main>
-<script type="text/javascript" src="js/tween.js"></script>
+<script type="text/javascript" src="js/tween.min.js"></script>
 <script type="text/javascript" src="js/2.js"></script>
 </body>
 </html>
