--- a/CV.html
+++ b/CV.html
@@ -27,7 +27,7 @@
     <div class="mask"></div>
 </div>
 <main>
-    <div id="about" class="userCard">
+    <div data-x id="about" class="userCard">
     <div class="pictureAndText clearfix">
         <div class="userPicture">
             <img src="img/avatar.jpg">
@@ -86,7 +86,7 @@
         汤成， 菜鸟前端工程师，资深前端讲师，现在在 毛坦厂 教前端课程。<br/>
         技能：前端开发，Rails 开发，Node.js 开发
     </p>
-    <div id="skill" class="skill">
+    <div data-x id="skill" class="skill">
         <h2>技能</h2>
         <ul class="clearfix">
             <li>HTML5 & CSS3
@@ -121,7 +121,7 @@
             </li>
         </ul>
     </div>
-    <div id="productions" class="sampleReels">
+    <div data-x id="productions" class="sampleReels">
         <p class="sampleText">作品集</p>
         <ul class="clearfix">
             <li id="point1">所有</li>
